--- a/zangoes.html
+++ b/zangoes.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Zangões</title>
+    <link rel="stylesheet" type="text/css" href="estilos.css">
   </head>
   <body>
     <h1>Zangões</h1>
-    <img src="imgs/zangao.png" class="casta-de-abelha">
+    <img src="imgs/zangao.png" class="casta-de-abelha direita">
     <p>Os zangões são as abelhas machos da colônia, cuja única função é
       fecundar a rainha durante o voo nupcial. As larvas de zangões são
       criadas em alvéolos maiores que os alvéolos das larvas de operárias
