--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">    
     <title>Abelhas</title>
+    <link rel="stylesheet" type="text/css" href="estilos.css">
     <link rel="icon" href="favicon.png">
   </head>
   <body>
-    <img src="imgs/logomarca.png">
+    <img id="logomarca" src="imgs/logomarca.png">
     <audio src="sounds/banjo-kazooie-click-clock-wood-spring.mp3" autoplay loop="0"></audio>
     <h1>Abelhas</h1>
     <p>Cultuadas ao longo da história por diversas civilizações como símbolo
@@ -38,5 +39,6 @@
       se dividem em castas: <a href="operarias.html">Operárias</a>,
       <a href="zangoes.html">Zangões</a> e <a href="rainha.html">Rainha</a>
     </p>
+    <script type="text/javascript" src="abelhinha.js"></script>
   </body>
 </html>
